(lang dune 3.12)

(name aoc)

(generate_opam_files true)

(source
 (github renormalize/ocaml-aoc-2023))

(authors "Saketh Kalaga")

(maintainers "Saketh Kalaga")

(license MIT)

(documentation https://github.com/renormalize/ocaml-aoc-2023)

(package
 (name aoc)
 (synopsis "Solutions to Advent of Code 2023 in OCaml")
 (description "Solutions to Advent of Code 2023 in OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
